Enhance section styles for improved responsiveness; adjust text alignment and image sizes for better display on smaller screens, and ensure consistent layout across devices.

--- a/sass/page/section/_about.scss
+++ b/sass/page/section/_about.scss
@@ -733,12 +733,15 @@
     display: -webkit-box;
     display: -ms-flexbox;
     padding: 8rem 10rem 0rem 10rem;
+    text-align: end;
 
     @include responsive.respond(smallPhone) {
       padding: 2rem 2rem 0rem 2rem;
+      text-align: start;
     }
     @include responsive.respond(phone) {
       padding: 2rem 2rem 0rem 2rem;
+      text-align: start;
     }
     @include responsive.respond(tablets) {
       padding: 4rem 4rem 0rem 4rem;
@@ -921,6 +924,15 @@
       }
       &__Right {
         width: 40%;
+        @include responsive.respond(smallPhone) {
+          width: 100%;
+          height: 100%;
+        }
+        @include responsive.respond(phone) {
+          width: 100%;
+          height: 100%;
+        }
+
         img {
           width: 352px;
           height: 346px;
@@ -1168,8 +1180,8 @@
       padding: 2rem 1rem 0 1rem;
     }
     &__VisionGoal__Container__Right img {
-      width: 90%;
-      height: 90%;
+      width: 100%;
+      height: 100%;
       margin-top: 1rem;
     }
     &__Story {
@@ -1197,9 +1209,9 @@
       font-size: 2.2rem;
     }
     &__Content__bottom__right img {
-      width: 200px;
+      width: 100%;
       height: auto;
-      margin-right: 40px;
+      // margin-right: 40px;
     }
     &__Mission__top p {
       font-size: 0.8rem;
